--- a/product.html
+++ b/product.html
@@ -266,7 +266,8 @@
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/Samsung_Galaxy_Note_10_5G.jpg');">
                                     </div>
-                                    <a href="" class="list__category-item__name">Samsung Galaxy Note 10 5G (12GB|256GB)</a>
+                                    <a href="" class="list__category-item__name">Samsung Galaxy Note 10 5G
+                                        (12GB|256GB)</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">4.500.000</span>
                                         <span class="list__category-item__price-old">5.000.000</span>
@@ -340,7 +341,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/xiaomi-redmi-note-12.jpg');"> </div>
-                                    <a href="" class="list__category-item__name">Điện thoại Xiaomi Redmi Note 12 - Hàng Chính
+                                    <a href="" class="list__category-item__name">Điện thoại Xiaomi Redmi Note 12 - Hàng
+                                        Chính
                                         Hãng, mới 100%, Bảo hành 18 tháng</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">4.170.000</span>
@@ -454,7 +456,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/y68.jpg');"> </div>
-                                    <a href="" class="list__category-item__name">Đồng hồ thông minh TWITCH Y68 D20S theo dõi
+                                    <a href="" class="list__category-item__name">Đồng hồ thông minh TWITCH Y68 D20S theo
+                                        dõi
                                         sức khỏe chất lượng cao)</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">75.537</span>
@@ -492,7 +495,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/GIW5.png');"> </div>
-                                    <a href="" class="list__category-item__name">Đồng hồ thông minh WIFI nghe gọi SIM 3G 4G có
+                                    <a href="" class="list__category-item__name">Đồng hồ thông minh WIFI nghe gọi SIM 3G
+                                        4G có
                                         GPS Dual Camera - GIW5</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">1.560.000</span>
@@ -530,7 +534,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/Smartwatch.png');"> </div>
-                                    <a href="" class="list__category-item__name">Đồng Hồ Thông Minh Smartwatch Mới Iwo Đồng Hồ
+                                    <a href="" class="list__category-item__name">Đồng Hồ Thông Minh Smartwatch Mới Iwo
+                                        Đồng Hồ
                                         Thông Minh D18 Chống Nước</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">321.300</span>
@@ -568,7 +573,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/band6.png');"> </div>
-                                    <a href="" class="list__category-item__name">Đồng Hồ Đeo Tay Thông MInh Nhỏ Gọn, Đa Năng
+                                    <a href="" class="list__category-item__name">Đồng Hồ Đeo Tay Thông MInh Nhỏ Gọn, Đa
+                                        Năng
                                         Xiaomi Mi Band 6</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">868.000</span>
@@ -608,7 +614,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/vsp.png');"> </div>
-                                    <a href="" class="list__category-item__name">Bộ máy tính để bàn Cấu hình cao ( Core i7 /
+                                    <a href="" class="list__category-item__name">Bộ máy tính để bàn Cấu hình cao ( Core
+                                        i7 /
                                         2600/ Ram 8Gb / SSD 240GB ) và Màn hình VSP 22 inch</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">4.560.000</span>
@@ -646,7 +653,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/gtx.png');"> </div>
-                                    <a href="" class="list__category-item__name">MAX PC GAMING X7 CPU Core i7-2600 Ram 4GB SSD
+                                    <a href="" class="list__category-item__name">MAX PC GAMING X7 CPU Core i7-2600 Ram
+                                        4GB SSD
                                         128GB GTX 750TI</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">5.180.000</span>
@@ -684,7 +692,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/dell.png');"> </div>
-                                    <a href="" class="list__category-item__name">BỘ Máy Tính Đồng Bộ Dell CORE I5-4570/RAM 8GB
+                                    <a href="" class="list__category-item__name">BỘ Máy Tính Đồng Bộ Dell CORE
+                                        I5-4570/RAM 8GB
                                         /SSD 120GB/HDD 500GB và Màn hình Dell 21.5 inch</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">4.464.000</span>
@@ -722,7 +731,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/vlimited.png');"> </div>
-                                    <a href="" class="list__category-item__name">Bộ máy tính để bàn Vlimited chơi game trọn độ
+                                    <a href="" class="list__category-item__name">Bộ máy tính để bàn Vlimited chơi game
+                                        trọn độ
                                         đầy đủ Case/8G/SSD/HDD/Vga rời/Màn hình</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">4.990.000</span>
@@ -760,7 +770,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/case.png');"> </div>
-                                    <a href="" class="list__category-item__name">Case máy tính để bàn chơi game MAX PC CPU core
+                                    <a href="" class="list__category-item__name">Case máy tính để bàn chơi game MAX PC
+                                        CPU core
                                         i5 10400F, Ram 16GB,SSD M2 128GB, HDD 500GB Card 1050TI+</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">14.088.000</span>
@@ -916,7 +927,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/vostro.png');"> </div>
-                                    <a href="" class="list__category-item__name">Laptop Dell Vostro 3405 (V4R53500U003W) (R5
+                                    <a href="" class="list__category-item__name">Laptop Dell Vostro 3405 (V4R53500U003W)
+                                        (R5
                                         3500U 8GB RAM/512GB SSD/14.0 inch FHD/Win10/Đen)</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">3.047.000</span>
@@ -954,7 +966,8 @@
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
                                         style="background-image: url('./assets/img/gia_do.png');"> </div>
-                                    <a href="" class="list__category-item__name">Giá đỡ laptop nhôm có thể gấp gọn dành cho
+                                    <a href="" class="list__category-item__name">Giá đỡ laptop nhôm có thể gấp gọn dành
+                                        cho
                                         Macbook Ipad Surface và máy tính xách tay</a>
                                     <div class="list__category-item__price">
                                         <span class="list__category-item__price-current">179.000 </span>
@@ -1111,7 +1124,104 @@
                 </div>
             </div>
         </footer>
+        <div class="footer__menu grid wide">
+            <ul class="footer__menu-list">
+                <li class="footer__menu-item">
+                    <a href="index.html" class="footer__menu-item-link">
+                        <i class="fa-solid fa-house-user footer__menu-item-icon"></i>
+                        <div class="footer__menu-item-title">Trang chủ</div>
+                    </a>
+                </li>
+                <li class="footer__menu-item footer__menu-item-link-menu">
+                    <div class="footer__menu-item-link ">
+                        <i class="fa-solid fa-list footer__menu-item-icon"></i>
+                        <div class="footer__menu-item-title">Danh mục</div>
+                    </div>
+                </li>
+                <li class="footer__menu-item">
+                    <a href="product.html" class="footer__menu-item-link">
+                        <i class="fas fa-shopping-cart footer__menu-item-icon"></i>
+                        <div class="footer__menu-item-title">Sản phẩm</div>
+                    </a>
+                </li>
+                <li class="footer__menu-item">
+                    <a href="knowlegde.html" class="footer__menu-item-link">
+                        <i class="far fa-newspaper footer__menu-item-icon"></i>
+                        <div class="footer__menu-item-title">Tin tức</div>
+                    </a>
+                </li>
+                <li class="footer__menu-item">
+                    <a href="product.html" class="footer__menu-item-link">
+                        <i class="fa-solid fa-heart footer__menu-item-icon footer__menu-item-icon-heart"></i>
+                        <div class="footer__menu-item-title">Yêu thích</div>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
+    <div class="modal">
+        
+    </div>
+    <div class="modal__container">
+        <div class="modal__header-menu">
+            <span class="modal__header-menu-title">Danh mục sản phẩm</span>
+        </div>
+        <ul class="modal__nav-list">
+            <li class="modal__nav-item">
+                <div class="modal__nav-item-wrap">
+                    <img src="./assets/img/laptop.jpg" alt="" class="modal__nav-item-img">
+                    <p class="modal__nav-item-title">Máy tính sách tay</p>
+                </div>
+                <i class="fa-solid fa-chevron-down modal__nav-item-icon"></i>
+            </li>
+            <li class="modal__nav-item">
+                <div class="modal__nav-item-wrap">
+                    <img src="./assets/img/redmi.jpg" alt="" class="modal__nav-item-img">
+                    <p class="modal__nav-item-title">Điện thoại thông minh</p>
+                </div>
+                <i class="fa-solid fa-chevron-down modal__nav-item-icon"></i>
+            </li>
+            <li class="modal__nav-item">
+                <div class="modal__nav-item-wrap">
+                    <img src="./assets/img/dongho.jpg" alt="" class="modal__nav-item-img">
+                    <p class="modal__nav-item-title">Smartwatch</p>
+                </div>
+                <i class="fa-solid fa-chevron-down modal__nav-item-icon"></i>
+            </li>
+            <li class="modal__nav-item">
+                <div class="modal__nav-item-wrap">
+                    <img src="./assets/img/tabpen.jpg" alt="" class="modal__nav-item-img">
+                    <p class="modal__nav-item-title">Phụ kiện</p>
+                </div>
+                <i class="fa-solid fa-chevron-down modal__nav-item-icon"></i>
+            </li>
+            <li class="modal__nav-item">
+                <div class="modal__nav-item-wrap">
+                    <img src="./assets/img/card.jpg" alt="" class="modal__nav-item-img">
+                    <p class="modal__nav-item-title">Phụ Kiện</p>
+                </div>
+                <i class="fa-solid fa-chevron-down modal__nav-item-icon"></i>
+            </li>
+        </ul>
+        <ul class="modal__page-list">
+            <li class="modal__page-item">
+                <a href="/index.html" class="modal__page-item-link">Trang chủ</a>
+            </li>
+            <li class="modal__page-item">
+                <a href="/product.html" class="modal__page-item-link">Sản phẩm</a>
+            </li>
+            <li class="modal__page-item">
+                <a href="/knowlegde.html" class="modal__page-item-link">Kiến thức & phần mềm</a>
+            </li>
+            <li class="modal__page-item">
+                <a href="/policy.html" class="modal__page-item-link">Chính sách bảo hành</a>
+            </li>
+            <li class="modal__page-item">
+                <a href="/contact.html" class="modal__page-item-link">Liên hệ</a>
+            </li>
+        </ul>
+    </div>
+    <script src="./assets/JS/modal.js"></script>
 </body>
 
 </html>
