--- a/knowlegde.html
+++ b/knowlegde.html
@@ -13,8 +13,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./assets/font/fontawesome-free-6.4.0-web/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/grid.css">
-    <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
     <title>Document</title>
 </head>
@@ -154,8 +154,8 @@
                     </span>
                 </div>
                 <div class="row">
-                    <div class="col-xl-3">
-                        <div class="post__list-heading hide-on-mobile-tablet">
+                    <div class="l-3  hide-on-mobile-tablet">
+                        <div class="post__list-heading">
                             <div class="post__list-title">
                                 <a href="" class="post__list-title-link">Bài viết xem nhiều</a>
                             </div>
@@ -163,9 +163,9 @@
                                 Đang cập nhật bài viết
                             </div>
                         </div>
-                        .
+                        
                     </div>
-                    <div class="l-9 col">
+                    <div class="l-9 col c-12">
                         <div class="row">
                             <div class="list__know-heading">
                                 <h1 class="list__know-heading-title">
@@ -336,7 +336,104 @@
                 </div>
             </div>
         </footer>
+        <div class="footer__menu grid wide">
+            <ul class="footer__menu-list">
+                <li class="footer__menu-item">
+                    <a href="index.html" class="footer__menu-item-link">
+                        <i class="fa-solid fa-house-user footer__menu-item-icon"></i>
+                        <div class="footer__menu-item-title">Trang chủ</div>
+                    </a>
+                </li>
+                <li class="footer__menu-item footer__menu-item-link-menu">
+                    <div class="footer__menu-item-link ">
+                        <i class="fa-solid fa-list footer__menu-item-icon"></i>
+                        <div class="footer__menu-item-title">Danh mục</div>
+                    </div>
+                </li>
+                <li class="footer__menu-item">
+                    <a href="product.html" class="footer__menu-item-link">
+                        <i class="fas fa-shopping-cart footer__menu-item-icon"></i>
+                        <div class="footer__menu-item-title">Sản phẩm</div>
+                    </a>
+                </li>
+                <li class="footer__menu-item">
+                    <a href="knowlegde.html" class="footer__menu-item-link">
+                        <i class="far fa-newspaper footer__menu-item-icon"></i>
+                        <div class="footer__menu-item-title">Tin tức</div>
+                    </a>
+                </li>
+                <li class="footer__menu-item">
+                    <a href="product.html" class="footer__menu-item-link">
+                        <i class="fa-solid fa-heart footer__menu-item-icon footer__menu-item-icon-heart"></i>
+                        <div class="footer__menu-item-title">Yêu thích</div>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
+    <div class="modal">
+        
+    </div>
+    <div class="modal__container">
+        <div class="modal__header-menu">
+            <span class="modal__header-menu-title">Danh mục sản phẩm</span>
+        </div>
+        <ul class="modal__nav-list">
+            <li class="modal__nav-item">
+                <div class="modal__nav-item-wrap">
+                    <img src="./assets/img/laptop.jpg" alt="" class="modal__nav-item-img">
+                    <p class="modal__nav-item-title">Máy tính sách tay</p>
+                </div>
+                <i class="fa-solid fa-chevron-down modal__nav-item-icon"></i>
+            </li>
+            <li class="modal__nav-item">
+                <div class="modal__nav-item-wrap">
+                    <img src="./assets/img/redmi.jpg" alt="" class="modal__nav-item-img">
+                    <p class="modal__nav-item-title">Điện thoại thông minh</p>
+                </div>
+                <i class="fa-solid fa-chevron-down modal__nav-item-icon"></i>
+            </li>
+            <li class="modal__nav-item">
+                <div class="modal__nav-item-wrap">
+                    <img src="./assets/img/dongho.jpg" alt="" class="modal__nav-item-img">
+                    <p class="modal__nav-item-title">Smartwatch</p>
+                </div>
+                <i class="fa-solid fa-chevron-down modal__nav-item-icon"></i>
+            </li>
+            <li class="modal__nav-item">
+                <div class="modal__nav-item-wrap">
+                    <img src="./assets/img/tabpen.jpg" alt="" class="modal__nav-item-img">
+                    <p class="modal__nav-item-title">Phụ kiện</p>
+                </div>
+                <i class="fa-solid fa-chevron-down modal__nav-item-icon"></i>
+            </li>
+            <li class="modal__nav-item">
+                <div class="modal__nav-item-wrap">
+                    <img src="./assets/img/card.jpg" alt="" class="modal__nav-item-img">
+                    <p class="modal__nav-item-title">Phụ Kiện</p>
+                </div>
+                <i class="fa-solid fa-chevron-down modal__nav-item-icon"></i>
+            </li>
+        </ul>
+        <ul class="modal__page-list">
+            <li class="modal__page-item">
+                <a href="/index.html" class="modal__page-item-link">Trang chủ</a>
+            </li>
+            <li class="modal__page-item">
+                <a href="/product.html" class="modal__page-item-link">Sản phẩm</a>
+            </li>
+            <li class="modal__page-item">
+                <a href="/knowlegde.html" class="modal__page-item-link">Kiến thức & phần mềm</a>
+            </li>
+            <li class="modal__page-item">
+                <a href="/policy.html" class="modal__page-item-link">Chính sách bảo hành</a>
+            </li>
+            <li class="modal__page-item">
+                <a href="/contact.html" class="modal__page-item-link">Liên hệ</a>
+            </li>
+        </ul>
+    </div>
+    <script src="./assets/JS/modal.js"></script>
 </body>
 
 </html>
