--- a/knowlegde.html
+++ b/knowlegde.html
@@ -382,35 +382,35 @@
             <li class="modal__nav-item">
                 <div class="modal__nav-item-wrap">
                     <img src="./assets/img/laptop.jpg" alt="" class="modal__nav-item-img">
-                    <p class="modal__nav-item-title">Máy tính sách tay</p>
+                    <a href="./product.html" class="modal__nav-item-title">Máy tính sách tay</a>
                 </div>
                 <i class="fa-solid fa-chevron-down modal__nav-item-icon"></i>
             </li>
             <li class="modal__nav-item">
                 <div class="modal__nav-item-wrap">
                     <img src="./assets/img/redmi.jpg" alt="" class="modal__nav-item-img">
-                    <p class="modal__nav-item-title">Điện thoại thông minh</p>
+                    <a href="./product.html" class="modal__nav-item-title">Điện thoại thông minh</a>
                 </div>
                 <i class="fa-solid fa-chevron-down modal__nav-item-icon"></i>
             </li>
             <li class="modal__nav-item">
                 <div class="modal__nav-item-wrap">
                     <img src="./assets/img/dongho.jpg" alt="" class="modal__nav-item-img">
-                    <p class="modal__nav-item-title">Smartwatch</p>
+                    <a href="./product.html" class="modal__nav-item-title">Smartwatch</a>
                 </div>
                 <i class="fa-solid fa-chevron-down modal__nav-item-icon"></i>
             </li>
             <li class="modal__nav-item">
                 <div class="modal__nav-item-wrap">
                     <img src="./assets/img/tabpen.jpg" alt="" class="modal__nav-item-img">
-                    <p class="modal__nav-item-title">Phụ kiện</p>
+                    <a href="./product.html" class="modal__nav-item-title">Phụ kiện</a>
                 </div>
                 <i class="fa-solid fa-chevron-down modal__nav-item-icon"></i>
             </li>
             <li class="modal__nav-item">
                 <div class="modal__nav-item-wrap">
                     <img src="./assets/img/card.jpg" alt="" class="modal__nav-item-img">
-                    <p class="modal__nav-item-title">Phụ Kiện</p>
+                    <a href="./product.html" class="modal__nav-item-title">Phụ Kiện</a>
                 </div>
                 <i class="fa-solid fa-chevron-down modal__nav-item-icon"></i>
             </li>
